--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 	margin-right:auto;
 }
 
+#mePolevaulting {
+	width: 300px;
+	height: 400px;
+}
 h1 {
 	color: black;
 	text-align: center;
@@ -28,6 +32,7 @@ body {
 	margin:1px 1px 1px 1px;
 	padding: 0.5cm 0.5cm 0.5cm 0.5cm;
 	background-image: url("https://verdict4u.files.wordpress.com/2017/03/wp-1488827974656.gif");
+	background-attachment: fixed;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	
